fix: align buttons (#2910)

--- a/app/src/components/features/mocksV2/MockEditorIndex/Editor/Header/index.css
+++ b/app/src/components/features/mocksV2/MockEditorIndex/Editor/Header/index.css
@@ -23,6 +23,7 @@
 .mock-editor-layout-header .header-right-section {
   display: flex;
   gap: 12px;
+  align-items: center;
 }
 
 .mock-editor-layout-header .header-right-section .ant-btn-icon-only svg {
